--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_profe.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_profe.html
@@ -2,11 +2,12 @@
 {% load static %}
 {% block contenido %}
 
-<div class="container-fluid row">
+<div style="margin-left: 10%; margin-right: 10%;">
   <div class="dropdown">
-    <button style="background-color: rgb(255, 255, 255); color: rgb(30, 38, 100);box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);" class="btn btn-secondary btn-block" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Menu de Administración
-    </button> 
+    <button style="background-color: rgb(15,48,74);box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);"
+      class="btn btn-secondary btn-block" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Menu de Administración ↓
+    </button>
     <ul class="dropdown-menu">
       <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a
           style="text-decoration: none; color: black;" href="{% url 'admin_apoderado' %}">Administrar Apoderados</a>
@@ -32,58 +33,63 @@
           style="text-decoration: none; color: black; " href="{% url 'dashboards' %}">Dashboards</a></li>
     </ul>
   </div>
-  <div class="">
+  <div>
     <div class="row">
-      <div style="border-left: 1px solid black;">
+      <div>
         <h2 class="titCurso" style="text-align: center; margin-bottom: 1%; ">Administrar Profesores</h2>
         <form class="formularioReunion row row-cols-md-2" method="POST" style="margin-bottom: 5%;">
           {% csrf_token %}
           <div class="mb3">
-            <label for="rut" class="form-label">Rut:</label>
-            <input type="text" class="form-control shadow" id="rut" name="rut" placeholder="Rut sin puntos ni guion" > 
+            <input type="text" class="form-control"
+              style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); margin-bottom: 5%;" id="rut" name="rut"
+              placeholder="Rut sin puntos ni guion">
           </div>
           <div class="mb3">
-            <label for="dv" class="form-label">Dv:</label>
-            <input type="text" class="form-control shadow" id="dv" name="dv" placeholder="Digito verificador">
+            <input type="text" class="form-control"
+              style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); margin-bottom: 5%;" id="dv" name="dv"
+              placeholder="Digito verificador">
           </div>
           <div class="mb3">
-            <label for="nombre" class="form-label">Nombre:</label>
-            <input type="text" class="form-control shadow" id="nombre" name="nombre">
+            <input type="text" class="form-control"
+              style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); margin-bottom: 5%;" id="nombre" name="Nombre"
+              placeholder="Nombre">
           </div>
           <div class="mb3">
-            <label for="apellido" class="form-label">Apellido:</label>
-            <input type="text" class="form-control shadow" id="apellido" name="apellido">
-          </div>
-          <div class="mb3" >
-            <label for="telefono" class="from-label">Telefono:</label>
-            <input type="text" class="form-control shadow" id="telefono" name="telefono">
+            <input type="text" class="form-control"
+              style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); margin-bottom: 5%;" id="apellido" name="apellido"
+              placeholder="Apellido">
           </div>
           <div class="mb3">
-            <label for="direccion" class="form-label">Direccion:</label>
-            <input type="text" class="form-control shadow" id="direccion" name="direccion">
+            <input type="text" class="form-control"
+              style="box-shadow: in set0 0 5px rgba(0, 0, 0, 0.5);margin-bottom: 5%;" id="telefono" name="telefono"
+              placeholder="Telefono">
           </div>
           <div class="mb3">
-            <label for="comuna" class="form-label">Comuna:</label>
-            <select name="comuna" id="comuna" class="form-select shadow">
-              <option value="">Selecciona...</option>
+            <input type="text" class="form-control"
+              style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); margin-bottom: 5%;" id="direccion" name="direccion"
+              placeholder="Direccion">
+          </div>
+          <div class="mb3">
+            <select name="comuna" id="comuna" class="form-select "
+              style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5) ;margin-bottom: 5%;">
+              <option value="">Selecciona COMUNA...</option>
               {% for co in comuna %}
               <option value="{{ co.0}}">{{co.1}}</option>
               {% endfor %}
             </select>
           </div>
           <div class="mb3">
-            <label for="curso" class="form-label">Curso:</label>
-            <select name="curso" id="curso" class="form-select shadow">
-              <option value="">Seleccione....</option>
+            <select name="curso" id="curso" class="form-select"
+              style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5) ;margin-bottom: 5%;">
+              <option value="">Seleccione CURSO....</option>
               {% for c in curso %}
               <option value="{{c.0}}">{{c.1}}</option>
               {% endfor %}
             </select>
           </div>
           <div class="mb3" style="margin-bottom: 2%;">
-            <label for="rol" class="form-label">Rol:</label>
-            <select name="rol" id="rol" class="form-select shadow">
-              <option value="">Selecccione...</option>
+            <select name="rol" id="rol" class="form-select" style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5) ;margin-bottom: 5%;">
+              <option value="">Selecccione ROL...</option>
               {% for r in rol %}
               <option value="{{r.0}}">{{r.1}}</option>
               {% endfor %}
@@ -121,8 +127,8 @@
               <td>{{ pro.4 }}</td>
               <td>{{ pro.5 }}</td>
               <td>
-                <a href="{% url 'borrar_profesor' pro.0 %}" class="btn btn-danger" style="margin-bottom: 10px;"
-                  >Eliminar</a>
+                <a href="{% url 'borrar_profesor' pro.0 %}" class="btn btn-danger"
+                  style="margin-bottom: 10px;">Eliminar</a>
               </td>
             </tr>
             {% endfor %}
