--- a/sistema_config/sistemaEducacion/Templates/iniciar_sesion.html
+++ b/sistema_config/sistemaEducacion/Templates/iniciar_sesion.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block contenido %}
 
-<div class="preparando">
-    <div class="contenedorInicio" style="margin-top: 7%; margin-bottom: 8%; margin-left: 25%;margin-right: 25%;color: rgb(104, 104, 104);background: white; box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);;border-radius: 10px;">
-        <h4 style="text-align: center; margin: 1%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(30, 38, 100); margin: 2%;">INICIAR SESIÓN</h4>
+<div>
+    <div class="contenedorInicio" style="margin-top: 2%; margin-bottom: 8%; margin-left: 25%;margin-right: 25%;color: rgb(104, 104, 104);background: white; box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);;border-radius: 10px;">
+        <h4 style="text-align: center; margin: 1%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(30, 38, 100); margin: 10%;">INICIAR SESIÓN</h4>
         <form method="POST" class="formularioSes">
             {% csrf_token %}
             <div class="mb-3">
