--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_evento.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_evento.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block contenido %}
-<div class="container-fluid row">
+<div style="margin-left: 10%; margin-right: 10%;">
   <div class="dropdown">
-    <button style="margin-left: 1%; margin-top: 0.5%;" class="btn btn-secondary dropdown-toggle" type="button"
-      data-bs-toggle="dropdown" aria-expanded="false">
-      Menu de Administracion
-    </button>
+    <button style="background-color: rgb(15,48,74);box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);" class="btn btn-secondary btn-block" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Menu de Administración   ↓
+    </button>    
     <ul class="dropdown-menu">
       <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a
           style="text-decoration: none; color: black;" href="{% url 'admin_apoderado' %}">Administrar Apoderados</a>
@@ -32,35 +31,33 @@
           style="text-decoration: none; color: black; " href="{% url 'dashboards' %}">Dashboards</a></li>
     </ul>
   </div>
-  <div class="col-md-12">
+  <div>
     <div class="row">
-      <div class="col-md-4" style="border-left: 1px solid black; ">
-        <h2 class="titCurso" style="text-align: center; margin-bottom: 1%;">Administrar Alumnos</h2>
-        <form class="formularioReunion" method="POST" enctype="multipart/form-data"
-          style="margin-bottom: 5%; height: 700px;">
+      <div>
+        <h2 class="titCurso" style="text-align: center; margin-bottom: 1%;">Crear Nuevos Eventos</h2>
+        <form class="formularioReunion row row-cols-md-2" method="POST" enctype="multipart/form-data"
+          style="margin-bottom: 5%; height: 300px;">
           {% csrf_token %}
           <div class="mb3">
-            <label for="descripcion" class="form-label">Descripcion:</label>
-            <input type="textArea" class="form-control shadow" id="descripcion" name="descripcion">
+            <textarea type="text-area" class="form-control " style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5) ;margin-bottom: 5%;" id="descripcion" name="descripcion" rows="3" placeholder="Descripción del evento"></textarea>
           </div>
           <div class="mb-3">
-            <label for="foto" class="form-label">Subir archivo</label>
-            <input class="form-control shadow" type="file" id="foto" name="foto">
+            <input class="form-control" type="file" id="foto" name="foto" style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5) ;margin-bottom: 5%;">
           </div>
           <div class="mb-3">
-            <label for="profe" class="form-label">Profesor:</label>
-            <select name="profe" class="form-select shadow">
-              <option>Selecciona...</option>
+            <select name="profe" class="form-select" style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5) ;margin-bottom: 5%;">
+              <option>Selecciona PROFESOR...</option>
               {% for p in profesor %}
               <option value="{{ p.0 }}">{{ p.1 }}</option>
               {% endfor %}
             </select>
           </div>
+          <div></div>
           <button type="submit" class="btn btn-success">Guardar</button>
           <button class="btn btn-primary">Modificar</button>
         </form>
       </div>
-      <div class="col-md-8">
+      <div>
         <h2 class="titCurso" style="text-align: center; ">Lista eventos</h2>
         <table class="table table-bordered">
           <thead>
