--- a/sistema_config/sistemaEducacion/Templates/Apoderados_Alumnos/revisar_notas.html
+++ b/sistema_config/sistemaEducacion/Templates/Apoderados_Alumnos/revisar_notas.html
@@ -7,85 +7,85 @@
         color: red;
     }
 </style>
-<a type="button" class="btn btn-secondary" href="{% url 'apoderado' %}">⬅ Volver</a>
-<h1 class="titCurso" style="text-align: center;">Notas Asignatura</h1>
-<div style="padding: 2%;">
+<div style="margin-left: 10%; margin-right: 10%;">
+    <a type="button" class="btn btn-secondary" href="{% url 'apoderado' %}"style="background-color: rgb(15,48,74);box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);">Volver ←</a>
+    <h1 class="titCurso" style="text-align: center;">Notas Asignatura</h1>
+    <div style="padding: 2%;">
 
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Nota 1</th>
-                <th>Nota 2</th>
-                <th>Nota 3</th>
-                <th>Nota 4</th>
-                <th>Nota 5</th>
-                <th>Nota 6</th>
-                <th>Promedio</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Alumno 1 -->
-            <tr>
-                <td>Alejandro López</td>
-                <td>5</td>
-                <td>6</td>
-                <td>4</td>
-                <td class="nota-roja">3.5</td>
-                <td>6</td>
-                <td>5.5</td>
-                <td>5.1</td>
-            </tr>
-            <!-- Alumno 2 -->
-            <tr>
-                <td>Ana Rodríguez</td>
-                <td>6.5</td>
-                <td>4</td>
-                <td class="nota-roja">3</td>
-                <td>5.5</td>
-                <td>6.5</td>
-                <td>7</td>
-                <td>5.2</td>
-            </tr>
-            <!-- Alumno 3 -->
-            <tr>
-                <td>Carlos Martínez</td>
-                <td>4.5</td>
-                <td>6.5</td>
-                <td>5</td>
-                <td>6.5</td>
-                <td>4.5</td>
-                <td>6</td>
-                <td>5.3</td>
-            </tr>
-            <!-- Alumno 4 -->
-            <tr>
-                <td>Laura Pérez</td>
-                <td>6</td>
-                <td>5</td>
-                <td>6.5</td>
-                <td>6</td>
-                <td>4.5</td>
-                <td>5</td>
-                <td>5.4</td>
-            </tr>
-            <!-- Alumno 5 -->
-            <tr>
-                <td>Juan García</td>
-                <td>4.5</td>
-                <td>4</td>
-                <td>5.5</td>
-                <td>6</td>
-                <td>6.5</td>
-                <td>6</td>
-                <td>5.2</td>
-            </tr>
-        </tbody>
-    </table>
-    <button type="button" class="btn" id="btnCurso"
-        style=" margin-bottom: 5%; background-color: mediumseagreen;">Descargar Notas</button>
-</div>
-<div>
-    
+        <table class="table table-bordered shadow">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Nota 1</th>
+                    <th>Nota 2</th>
+                    <th>Nota 3</th>
+                    <th>Nota 4</th>
+                    <th>Nota 5</th>
+                    <th>Nota 6</th>
+                    <th>Promedio</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Alumno 1 -->
+                <tr>
+                    <td>Alejandro López</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>4</td>
+                    <td class="nota-roja">3.5</td>
+                    <td>6</td>
+                    <td>5.5</td>
+                    <td>5.1</td>
+                </tr>
+                <!-- Alumno 2 -->
+                <tr>
+                    <td>Ana Rodríguez</td>
+                    <td>6.5</td>
+                    <td>4</td>
+                    <td class="nota-roja">3</td>
+                    <td>5.5</td>
+                    <td>6.5</td>
+                    <td>7</td>
+                    <td>5.2</td>
+                </tr>
+                <!-- Alumno 3 -->
+                <tr>
+                    <td>Carlos Martínez</td>
+                    <td>4.5</td>
+                    <td>6.5</td>
+                    <td>5</td>
+                    <td>6.5</td>
+                    <td>4.5</td>
+                    <td>6</td>
+                    <td>5.3</td>
+                </tr>
+                <!-- Alumno 4 -->
+                <tr>
+                    <td>Laura Pérez</td>
+                    <td>6</td>
+                    <td>5</td>
+                    <td>6.5</td>
+                    <td>6</td>
+                    <td>4.5</td>
+                    <td>5</td>
+                    <td>5.4</td>
+                </tr>
+                <!-- Alumno 5 -->
+                <tr>
+                    <td>Juan García</td>
+                    <td>4.5</td>
+                    <td>4</td>
+                    <td>5.5</td>
+                    <td>6</td>
+                    <td>6.5</td>
+                    <td>6</td>
+                    <td>5.2</td>
+                </tr>
+            </tbody>
+        </table>
+        <button type="button" class="btn" id="btnCurso"
+            style=" margin-bottom: 5%; background-color: rgb(237,123,61);">Descargar Notas</button>
+    </div>
+
 </div>
 {% endblock %}
